Class-Code/1.Control Statements/Conditional Statements/Switch Statements/program2.txt
class switchDemo{

        public static void main(String[]args){

                int x = 5;
                switch(x){

                        case 1:
                                System.out.println("1");
                                break;

                        case 2:
                                System.out.println("2");
                                break;

                        case 5:
                                System.out.println("First-5");
                                break;

                        case 5:
                                System.out.println("First-5");
                                break;

                        case 2:
                                System.out.println("second-2");
                                break;

                        default :
                                System.out.println("No Match");
                                break;
                }
        }
}
//O/P :

  /*dips.java:20: error: duplicate case label
                        case 5:
                        ^
   dips.java:24: error: duplicate case label
                        case 2:
                        ^
   2 errors*/